2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7

2002-08-12  Jody Goldberg <jody@gnome.org>

	* ms-obj.c (ms_object_attr_new_array) : new.
	(ms_object_attr_get_expr) : ditto.
	(ms_object_attr_destroy) : support arrays.
	(ms_obj_read_pre_biff8_obj) : Parse the coord list for polygons.

	* ms-excel-read.c (ms_excel_read_SUPBOOK) : do a touch more.
	Still need to write the encoded path parser.

	* ms-excel-read.c (ms_excel_read_cf) : don't leak.

2002-08-11  Jody Goldberg <jody@gnome.org>

	* ms-formula-read.c (ms_excel_parse_formula) : add bounds testing to
	  reading const strings.  It will save us from corrupt data, and
	  rescue us from the misexported xls in 1.0.6,1.0.7

	* ms-excel-read.c (biff_xf_data_new) : read shrink to fit.
	(ms_excel_parse_NAME) : Ignore 0 length expressions.

	* ms-formula-read.c (expr_tree_error) : new.
	(parse_list_pop) : use it more loudly here.
	(ms_excel_parse_formula) : and here.

2002-08-09  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (ms_excel_read_workbook) : silence the warnings
	  caused by reading the padding at the end of files.

2002-08-08  Jody Goldberg <jody@gnome.org>

	* ms-formula-read.c (ms_excel_parse_formula) : improve handling of
	  arrays.

	* ms-excel-read.c (biff_boundsheet_data_new) : improve debug spew.
	(sst_read_string) : no need to pass version an sst is biff8 specific.
	(ms_excel_read_SST) : ditto.
	(ms_excel_read_EXSST) : new convience routine.
	(biff_boundsheet_data_new) : move boundsheet_data_by_index into a ptr
	  array, and store the gnumeric sheets directly.
	(ms_excel_workbook_new) : use g_hash_table_new_full to make cleanup
	  easier.
	(ms_excel_workbook_destroy) : simplify.
	(ms_excel_read_SETUP) : support the 'print comments' flag
	(ms_excel_read_MULRK) : split into its own function.
	(ms_excel_read_MULBLANK) : ditto.
	(ms_excel_read_SCL) : ditto
	(ms_excel_read_sheet) : spew the sheet password in case we need to
	  generate it.