@@ -31,6 +31,7 @@ typedef enum {
 	MS_OBJ_ATTR_IS_INT_MASK = 0x1000,
 	MS_OBJ_ATTR_BLIP_ID,
 	MS_OBJ_ATTR_FILL_COLOR,
+	MS_OBJ_ATTR_OUTLINE_COLOR,
 	MS_OBJ_ATTR_SCROLLBAR_VALUE,
 	MS_OBJ_ATTR_SCROLLBAR_MIN,
 	MS_OBJ_ATTR_SCROLLBAR_MAX,
