@@ -1,3 +1,12 @@
+2002-08-13  Jody Goldberg <jody@gnome.org>
+
+	* ms-obj.c (ms_obj_read_pre_biff8_obj) : support colours for polygons.
+
+	* ms-excel-read.c (ms_sheet_create_obj) : Add support for polygon
+	  colours.
+	(ms_sheet_obj_anchor_to_pos) : hmm, our supposition that >= 97 ==
+	  1/256 and < 97 == 1024 seems wrong in the face of chap03-1.
+
 2002-08-12  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.7
